11/15/10 debug CapacitorShapeFactory methods used by E-field Detector
11/15/10 clean up CapacitorShapeFactory, add methods needed for E-field Detector
11/15/10 add ShapeUtils.add and subtract
11/15/10 remove Point3D from BoxShapeFactory interface
11/15/10 subtract portion of bottom wire occluded by bottom plate
11/15/10 refinements in CapacitorShapeFactory
11/12/10 shape of bottom wire subtracts dielectric and top plate shapes (bottom plate is OK)
11/12/10 implement Capacitor.topPlateIntersects(Shape) and bottomPlateIntersects(Shape), voltmeter probes can now touch the plates
11/12/10 implement shape factory for capacitor, handle object occlusion via shape subtraction
11/12/10 move code for box shapes into BoxShapeFactory, use in BoxNode
11/12/10 remove MVT.modelToModel(Point3D), no longer needed since all Shape creation is in view coordinate frame
11/12/10 change all Shape generation to use global *view* coordinate frame, view needs this for rendering, model doesn't care for Shape intersection
11/12/10 provide MVT to model elements, for 2D shape generation in model coordinates
11/12/10 add method in MVT for "flattening" a 3D model point to a 2D point, still in model coordinates
11/12/10 use consistent labeling of points for defining 3D box faces
# 0.00.42 (46037) Nov 12, 2010
11/12/10 make charges bolder
# 0.00.41 (46029) Nov 12, 2010
11/12/10 use a non-linear relationship for showing total charge on dielectric, so that changes are clearly visible with battery voltages
11/12/10 hide debug nodes when voltmeter is hidden
# 0.00.40 (46011) Nov 11, 2010
11/11/10 dev version to demonstrate shape-based voltmeter probes
11/11/10 move responsibility for debug shape rendering into ShapesDebugNode and out of general nodes, all shape generation can now be in world coordinate frame
11/11/10 move all Shape creation stuff out of the model and into factories, usable by both model and view
11/11/10 add constant for MODEL_BOUNDS_STROKE